# paradise-pdf

./: .gitignore  README.md  index.html  logo-preview.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  ROADMAP.md  TEST-SCENARIOS-SPLITTER.md  WORKFLOW_LOCAL_TEST.md
scripts/: refresh-app-icon.sh
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  PrivacyInfo.xcprivacy  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lopdf_local/src/: document.rs  object.rs  parser_aux.rs  writer.rs
src-tauri/src/: lib.rs  main.rs
src/components/: BulkRenamer.tsx  Logo.tsx  PageBoxInspector.tsx  PdfCompressor.tsx  PdfMerger.tsx  PdfMixer.tsx  PdfOrganiser.tsx  PdfPropertyViewer.tsx  PdfProtect.tsx  PdfRotator.tsx  PdfSplitter.tsx  PdfThumbnail.tsx  PdfUnlock.tsx
