[package]
name = "mac-batch-renamer"
version = "3.4.9"
description = "Batch rename files with a configurable naming pattern"
authors = ["Peter Haddad"]
edition = "2021"

[lib]
name = "mac_batch_renamer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-localhost = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
lopdf = { git = "https://github.com/J-F-Liu/lopdf" }
image = "0.25"
memmap2 = "0.9"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
